--- a/media/less/mobile/users.less
+++ b/media/less/mobile/users.less
@@ -25,14 +25,12 @@
     }
   }
 
-  #page {
-    .wrapper {
-      background: @mobileFormBackground;
-    }
+  > .wrapper {
+    background: @mobileFormBackground;
+  }
 
-    form {
-      padding: 14px;
-    }
+  form {
+    padding: 14px;
   }
 }
 
@@ -124,10 +122,8 @@
     padding: 0 10px;
   }
 
-  #page {
-    .wrapper {
-      background: @mobileFormBackground;
-    }
+  > .wrapper {
+    background: @mobileFormBackground;
   }
 }
 
@@ -294,10 +290,8 @@
     }
   }
 
-  #page {
-    .wrapper {
-      background: @mobileFormBackground;
-    }
+  > .wrapper {
+    background: @mobileFormBackground;
   }
 }
 
@@ -318,9 +312,7 @@
     }
   }
 
-  #page {
-    .wrapper {
-      background: @mobileFormBackground;
-    }
+  .wrapper {
+    background: @mobileFormBackground;
   }
 }
